src/objects/fprd__GBL_Intervener__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>interveners</relationshipLabel>
        <relationshipName>interveners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOI__c</fullName>
        <label>DOI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>N_DOI__c</fullName>
        <label>N_DOI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>interveners</relationshipLabel>
        <relationshipName>interveners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <label>Participation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>interveners</relationshipLabel>
        <relationshipName>interveners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fprd__GBL_Opportunity_product__c</fullName>
        <label>Opportunity product</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMaster</label>
        <type>Checkbox</type>
    </fields>
    <label>Intervener</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>interveners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>